force-app/main/default/objects/SVMXA360__CONF_MobileConfiguration__c/SVMXA360__CONF_MobileConfiguration__c.object-meta.xml
<CustomObject>
    <description>This object configuration related to SFS Mobile.</description>
    <label>A360 Mobile Configuration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>A360 Mobile Configuration</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A360 Mobile Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>