force-app/main/default/objects/SVMXA360__CONF_MobileConfiguration__c/fields/SVMXA360__Description__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Description__c</fullName>
    <description>This has the brief description of the configuration.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>