force-app/main/default/objects/SVMXA360__CONF_MobileConfiguration__c/fields/SVMXA360__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DeveloperName__c</fullName>
    <description>Stores the developer name of the configuration record.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Developer Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>