force-app/main/default/objects/SVMXA360__CONF_MobileConfiguration__c/fields/SVMXA360__isDefault__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__isDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates whether this is the default profile.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>