force-app/main/default/objects/SVMXA360__CONF_MobileConfiguration__c/listViews/SVMXA360__All.listView-meta.xml
<ListView>
    <fullName>SVMXA360__All</fullName>
    <columns>NAME</columns>
    <columns>SVMXA360__DeveloperName__c</columns>
    <columns>SVMXA360__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>